create spacial_events scaffeld

--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -34,4 +34,4 @@
 	</div>
 </div>
 
-<%= invite_acceptation_invitation_url(inviter: current_user.slug) %>
+<p><%= invite_acceptation_invitation_url(inviter: current_user.slug) %></p>
