--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -11,6 +11,7 @@
         <li> <%= link_to "States", states_path %></li>
         <li> <%= link_to "Countries", countries_path %></li>
         <li> <%= link_to "Bookings", bookings_path %></li>
+        <li> <%= link_to "Spacial events", spacial_events_path %></li>
       </ul>
     </div>
   </div>
