--- a/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_without_autocomplete.html.erb
@@ -2,7 +2,7 @@
 <div class="origin_input col-sm-6 my-col-md-12 my-col-lg-7">
     <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input required', placeholder: t("search_subtrips.form.mode.select.placeholder.origin") } %>
 	<div class="cycle select_mode <%= lang_other_side %>">
-	<%= f.select :origin_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]}%>
+	<%= f.select :origin_cycle,  @search_subtrip.cycle_range.map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]}%>
 		<!-- <span class="glyphicon glyphicon-chevron-down"></span> -->
 	</div>
 </div>
@@ -11,7 +11,7 @@
 <div class=" destination_input col-sm-6 my-col-md-12 my-col-lg-7">
     <%= f.grouped_collection_select :destination_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, { class: 'select2_input required', placeholder: t("search_subtrips.form.mode.select.placeholder.destination") } %>
 	<div class="cycle select_mode <%= lang_other_side %>">
-	<%= f.select :destination_cycle, (5..50).step(5).map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]} %> 
+	<%= f.select :destination_cycle,  @search_subtrip.cycle_range.map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]} %> 
 		<!-- <span class="glyphicon glyphicon-chevron-down"></span> -->
 	</div>
 </div>
