--- a/app/views/homes/_search_form_without_autocomplete.html.erb
+++ b/app/views/homes/_search_form_without_autocomplete.html.erb
@@ -1,7 +1,7 @@
 <!-- Origin -->
 <div class="form-group">
 	<div class="origin_input ">
-	    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input required', placeholder: t("search_subtrips.form.mode.select.placeholder.origin") } %>
+	    <%= f.grouped_collection_select :origin_id, State.order(:local_name), :cities, :local_name, :id, :local_name, {:include_blank => true}, {:class => 'select2_input ', placeholder: t("search_subtrips.form.mode.select.placeholder.origin") } %>
 	</div>
 </div>
 
