--- a/app/views/application/nav/_my_network.html.erb
+++ b/app/views/application/nav/_my_network.html.erb
@@ -5,6 +5,6 @@
 	<ul class="dropdown-menu">
 		<li><%= link_to t('.invitation_sending'), invitation_path %></li>
 		<li><%= link_to t('.my_network'), network_path(current_user.slug) %></li>
-		<li><%= link_to t('about_network'), page_path('about_network') %></li>
+		<!-- <li><%#= link_to t('about_network'), page_path('about_network') %></li> -->
 	</ul>
 </li>
