--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -18,20 +18,28 @@
 				 
 				<% end %>
 
+				<hr>
+				<div class="panel-body">
+					<p><strong> <%= t ".send_invitation_link" %></strong></p>
+					<p> <%= invite_acceptation_invitation_url(inviter: current_user.slug) %></p>
+				</div>
+
 		  </div>
 		</div>
 	</div>
+
+
 </div>
 
-<h4><%= t ".list_of_invited_users" %></h4>
-<div class="panel panel-default">
-	<div class="panel-body">
-		<ol>
-			<% current_user.invited_users.each do |u| %>
-				<li><%= link_to u.name, profile_url(u) %></li>		
-			<% end %>
-		</ol>
+<div class="col-sm-4 col-sm-offset-4">
+	<h4><%= t ".list_of_invited_users" %></h4>
+	<div class="panel panel-default ">
+		<div class="panel-body">
+			<ol>
+				<% current_user.invited_users.each do |u| %>
+					<li><%= link_to u.name, profile_url(u) %></li>		
+				<% end %>
+			</ol>
+		</div>
 	</div>
 </div>
-
-<p><%= invite_acceptation_invitation_url(inviter: current_user.slug) %></p>
