--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -84,37 +84,13 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 				top: -1px;
 			}
 		}
-		.select_mode{
-			border: 1px solid #aaa;
-			height: 26px;
-			background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.5, #fff));
-			background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 50%);
-			background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 50%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
-			background-image: linear-gradient(top, #fff 0%, #eee 50%);
-			border-top-left-radius: 4px;
-			border-bottom-left-radius: 4px;			
-			span{
-				top: -5px;
-			}
-			select{
-				height: 26px;
-			}
-		}
-	}
-	.mode-selector a{
-		font-size: .8em !important;
 	}
 }
 
-.autocomplete_mode{
-  // right: 234px;
-  top: 3px; 		
-}
-.select_mode{
-  // right: 234px;
-  top: -4px;	
-}
+// .autocomplete_mode{
+//   // right: 234px;
+//   top: 3px; 		
+// }
 
 .datepicker-input{
 	input{
