--- a/app/views/bookings/booking_acceptance.html.erb
+++ b/app/views/bookings/booking_acceptance.html.erb
@@ -26,11 +26,11 @@
 			  		</tr>
 			  		<tr>
 			  			<th><%= t 'from' %> </th>
-			  			<th><%= @booking.subtrip.origin.name %>	</th>  			
+			  			<th><%= @booking.subtrip.origin %>	</th>  			
 			  		</tr>
 			  		<tr>
 			  			<th><%= t 'to' %> </th>
-			  			<th><%= @booking.subtrip.destination.name %></th> 
+			  			<th><%= @booking.subtrip.destination %></th> 
 			  		</tr>
 
 				  	<tr>
