--- a/app/views/homes/_sample_subtrips_row.html.erb
+++ b/app/views/homes/_sample_subtrips_row.html.erb
@@ -2,9 +2,9 @@
 	<a href="<%= subtrip_path(subtrip.id) %>" >
 		<div class="col-xs-4">
 			<h4 class="fromto">
-				<span class="from"><%= subtrip.origin.local_name %> </span>
+				<span class="from"><%= subtrip.origin %> </span>
 				<span class="arrow-ie">&larr;</span>  
-				<span class="to"><%= subtrip.destination.local_name %></span>
+				<span class="to"><%= subtrip.destination %></span>
 			</h4>
 		</div>
 
