--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -1,18 +1,19 @@
 <!-- Origin -->
-<div class="origin_input col-sm-6  my-col-md-12 my-col-lg-7">
-	<%= f.input :origin_name,:label => false, required: false, placeholder:t("search_subtrips.form.mode.autocomplete.placeholder.origin"),  input_html: {class: "form-control", value: @search_subtrip.origin} %>					
+<div class="origin_input col-sm-6  my-col-md-12 my-col-lg-8">
+	<%= f.input :origin_address,:label => false, required: false, placeholder:t("search_subtrips.form.mode.autocomplete.placeholder.origin"),  input_html: {class: "form-control", value: @search_subtrip.origin_address} %>					
 	<div class=" cycle autocomplete_mode <%= lang_other_side %>" style="border:0;">
 		<%= f.select :origin_cycle, @search_subtrip.cycle_range.map{|s| ["#{s} #{t("search_subtrips.form.km")}", s]}%>
 	</div>
 </div>
 
 <!-- Destination -->
-<div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-7">
-	<%= f.input :destination_name,:label => false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control", value: @search_subtrip.destination} %>
+<div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-8">
+	<%= f.input :destination_address,:label => false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control", value: @search_subtrip.destination_address} %>
 	<div class=" cycle autocomplete_mode <%= lang_other_side %>"  style="border:0;">
 		<%= f.select :destination_cycle, @search_subtrip.cycle_range.map{|s| ["#{s} #{t("search_subtrips.form.km")} ", s]}%> 
 	</div>
 </div>
+
 
 <!-- Hidden fields -->
 <%= f.hidden_field :origin_lat, value: nil %>
