--- a/app/views/subtrips/show/_data_for_gmaps.html.erb
+++ b/app/views/subtrips/show/_data_for_gmaps.html.erb
@@ -1,3 +1,3 @@
-<h4><%= subtrip.origin.local_name %></h4>
+<h4><%= subtrip.origin %></h4>
 
 <p>ساعت حرکت: <%= jalali_time(subtrip.date_time) %></p>
