--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,1 +1,4 @@
 <%= render 'form_new' %>
+
+<input type="text" name="lname"     id="search_subtrip_origin_address" class="visible-print">
+<input type="text" name="lname" id="search_subtrip_destination_address" class="visible-print">
