--- a/app/views/user_mailer/_trip_details.html.erb
+++ b/app/views/user_mailer/_trip_details.html.erb
@@ -5,11 +5,11 @@
 	<tbody>
 		<tr>
 			<th style="text-align: left;width: 234px;"><%= t 'from' %></th>
-			<td style="text-align: left;width: 234px;"><%= @subtrip.origin.name %></td>
+			<td style="text-align: left;width: 234px;"><%= @subtrip.origin %></td>
 		</tr>
 		<tr>
 			<th style="text-align: left;width: 234px;"><%= t 'to' %></th>
-			<td style="text-align: left;width: 234px;"><%= @subtrip.destination.name %></td>
+			<td style="text-align: left;width: 234px;"><%= @subtrip.destination %></td>
 		</tr>
 		<tr>
 			<th style="text-align: left;width: 234px;"><%= t 'day' %></th>
