--- a/app/views/trips/_subtrip_fields.html.erb
+++ b/app/views/trips/_subtrip_fields.html.erb
@@ -1,5 +1,5 @@
 <fieldset class="col-sm-12 1col-sm-offset-3">
-  <%= link_to "Some Page", '#', class: "add_fields1" %> 
+  <%= link_to t(".add_stopover"), '#', class: "add_fields btn btn-primary btn-sm" %> 
 <!-- On -->
   <div class="datetime">
     <div class="col-sm-2">
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="remove_fields_div col-sm-1">
-      <%= link_to t(".remove"), "#", class: "remove_fields1" %>
+      <%= link_to t(".remove"), "#", class: "remove_fields" %>
     </div>
   </div>      
 </fieldset>
