--- a/app/views/homes/_search_form_with_autocomplete.html.erb
+++ b/app/views/homes/_search_form_with_autocomplete.html.erb
@@ -17,7 +17,7 @@
 <%= f.hidden_field :origin_cycle, value: 20 %>
 <%= f.hidden_field :destination_cycle, value: 20 %>
 
-<%= f.hidden_field :origin_lat, value: nil %>
-<%= f.hidden_field :origin_lng, value: nil %>
-<%= f.hidden_field :destination_lat, value: nil %>
-<%= f.hidden_field :destination_lng, value: nil %>	
+<%= f.hidden_field :olat, value: nil %>
+<%= f.hidden_field :olng, value: nil %>
+<%= f.hidden_field :dlat, value: nil %>
+<%= f.hidden_field :dlng, value: nil %>	
