--- a/app/views/homes/_spacial_events.html.erb
+++ b/app/views/homes/_spacial_events.html.erb
@@ -15,7 +15,7 @@
 					<strong><%= t(".title",title: se.title) %></strong>	
 				</div>				
 			  <div class="col-sm-6">
-					<%= link_to t(".button",des: se.destination.local_name), spacial_event_path(se.permalink), class: "btn btn-warning btn-lg btn-block" %>
+					<%= link_to t(".button",des: se.destination_address), spacial_event_path(se.permalink), class: "btn btn-warning btn-lg btn-block" %>
 				</div>				
 			</div>	
 			<br>	
