--- a/app/views/spacial_events/index.html.erb
+++ b/app/views/spacial_events/index.html.erb
@@ -24,8 +24,8 @@
         <td><%= spacial_event.title %></td>
         <td><%= spacial_event.image %></td>
         <td><%= spacial_event.permalink %></td>
-        <td><%= spacial_event.origin_id %></td>
-        <td><%= spacial_event.destination_id %></td>
+        <td><%= spacial_event.origin_address %></td>
+        <td><%= spacial_event.destination_address %></td>
         <td><%= spacial_event.origin_cycle %></td>
         <td><%= spacial_event.destination_cycle %></td>
         <td><%= spacial_event.start_date %></td>
