--- a/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
+++ b/app/views/search_subtrips/_search_form_with_autocomplete.html.erb
@@ -8,7 +8,7 @@
 
 <!-- Destination -->
 <div class=" destination_input col-sm-6  my-col-md-12 my-col-lg-8">
-	<%= f.input :destination_address,:label => false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control", value: @search_subtrip.destination_address} %>
+	<%= f.input :destination_address,:label => false,required: false, placeholder: t("search_subtrips.form.mode.autocomplete.placeholder.destination"), input_html: {class: "form-control", value: @search_subtrip.destination_address} %>
 	<div class=" cycle autocomplete_mode <%= lang_other_side %>"  style="border:0;">
 		<%= f.select :destination_cycle, @search_subtrip.cycle_range.map{|s| ["#{s} #{t("search_subtrips.form.km")} ", s]}%> 
 	</div>
@@ -16,7 +16,7 @@
 
 
 <!-- Hidden fields -->
-<%= f.hidden_field :origin_lat, value: nil %>
-<%= f.hidden_field :origin_lng, value: nil %>
-<%= f.hidden_field :destination_lat, value: nil %>
-<%= f.hidden_field :destination_lng, value: nil %>	
+<%= f.hidden_field :olat, value: nil %>
+<%= f.hidden_field :olng, value: nil %>
+<%= f.hidden_field :dlat, value: nil %>
+<%= f.hidden_field :dlng, value: nil %>	
