--- a/app/views/subtrips/_subtrip_search_raw.html.erb
+++ b/app/views/subtrips/_subtrip_search_raw.html.erb
@@ -29,9 +29,23 @@
 				<small><%= jdate_humanize(subtrip.date_time, params[:locale]) %></small>
 			</h3> 
 			<h3 class="fromto">
-				<span class="from"><%= subtrip.origin %> </span>
-				<span class="arrow-ie">&larr;</span>  
-				<span class="to"><%= subtrip.destination %></span>
+				<div class="table-responsive">
+				  <table class="table">
+					  <tbody>
+					  	<tr>
+					  		<td>
+									<span class="from"><%= subtrip.origin %> </span>
+					  		</td>
+				  
+					  		<td class="to"><%= params[:locale] == "fa" ? "&larr;".html_safe : "&rarr;".html_safe %></td>
+					  		<td>
+									<span class="to" style='float: <%= lang_other_side %>;'><%= subtrip.destination %></span>
+					  		</td>
+					  	</tr>
+					  </tbody>
+				  </table>
+				</div>
+
 			</h3>
 			<h4 class="car">
 				<%= t 'car_model' %> 
