create currency scaffold and globalize table for it and add it in trip and subtrips forms and views

--- a/app/views/bookings/booking_acceptance.html.erb
+++ b/app/views/bookings/booking_acceptance.html.erb
@@ -45,7 +45,7 @@
 
 				  	<tr>
 				  		<th><%= t 'price' %></th>
-				  		<th><%= t 'currency', amount: @subtrip.price %></th>
+				  		<th><%= t 'currency', amount: @subtrip.price, unit: @subtrip.trip.currency.try(:symbol) %></th>
 				  	</tr>  
 
 		  		</tbody>
