--- a/app/views/subtrips/_subtrip_search_raw.html.erb
+++ b/app/views/subtrips/_subtrip_search_raw.html.erb
@@ -59,7 +59,7 @@
 			<div class="price">
 				<strong>
 				<%#= number_to_currency(1234567,  separator: "٬", format: "%n") %> 
-					<%= t 'currency', amount: currency(subtrip.price) %>
+					<%= t 'currency', amount: currency(subtrip.price), unit: subtrip.trip.currency.try(:symbol) %>
 				</strong>
 				<span class="price-unit"><%= t('per_passenger') %></span>
 			</div>
