--- a/app/views/trips/_form_new.html.erb
+++ b/app/views/trips/_form_new.html.erb
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
   <div class="panel-heading"><%= t('.title') %></div>
   <div class="panel-body">
-    <%= form_for(@trip) do |f| %>
+    <%= simple_form_for(@trip) do |f| %>
       <%= error_messages_for(@trip) %>
      
      
@@ -24,6 +24,16 @@
         </div>
       </div>
       
+      <!-- currency -->
+      <div class="row"> 
+        <div class="col-sm-3">
+          <%= f.label :currency %>
+        </div>     
+        <div class="col-sm-8">
+          <%= f.association :currency, label: false, selected: 1, class: "form-control" %>
+        </div>
+      </div> 
+
       <!-- detail -->
       <div class="row"> 
         <div class="col-sm-3">
