--- a/app/views/trips/show_edit/_subtrip_fields_show.html.erb
+++ b/app/views/trips/show_edit/_subtrip_fields_show.html.erb
@@ -6,7 +6,7 @@
   </span>  
   <span class="col-sm-3"><%= f.object.origin %> </span>
   <span class="col-sm-3"><%= f.object.destination %> </span>
-	<span class="col-sm-2"><%= t('currency', amount: f.object.price) %></span>  	
+	<span class="col-sm-2"><%= t('currency', amount: f.object.price, unit: f.object.trip.currency.try(:symbol)) %></span>  	
 
   <%#= f.hidden_field :_destroy %>
   <%#= link_to t('remove') , "#", class: "remove_fields col-sm-1 pull-left" %>  
