create helper methods for date and time that the date time can change in persianand english languages

--- a/app/views/homes/_sample_subtrips_row.html.erb
+++ b/app/views/homes/_sample_subtrips_row.html.erb
@@ -12,7 +12,7 @@
 			<div class="time">
 				<%= subtrip.date_time.to_s(:time_ampm) %>  <br>
 				<small>
-					<%= jdate_humanize(subtrip.date_time, params[:locale]) %>
+					<%= jdate_humanize(subtrip.date_time) %>
 				</small>
 			</div>
 		</div>
