--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -22,7 +22,7 @@
                 <td>
                   <%= booking.subtrip.date_time.to_s(:time) %> &nbsp;
                   <%= am_pm booking.subtrip.date_time %>&nbsp;-&nbsp;
-                  <%= jdate_humanize(booking.subtrip.date_time, params[:locale])  %>
+                  <%= jdate_humanize(booking.subtrip.date_time)  %>
                 </td>
                 <td>
                   <%= booking.subtrip.origin %>&larr;
