--- a/app/views/subtrips/_subtrip.html.erb
+++ b/app/views/subtrips/_subtrip.html.erb
@@ -1,5 +1,8 @@
 <% if session[:temp].nil? || session[:temp] != subtrip.jday  %>
-	<h4 class="subtrips-date">  <%= jalali_day subtrip.date_time %> <%= jalali_date subtrip.date_time %></h4>
+	<h4 class="subtrips-date">  
+		<%= jday_humanize(subtrip.try(:date_time)) %> 
+		<%= jdate_humanize_without_today(subtrip.try(:date_time)) %>
+	</h4>
 		<%= render partial: 'subtrips/subtrip_search_raw', locals: {subtrip: subtrip} %>
 <% else %>
 	<% if (session[:temp] == subtrip.jday) %>	
