add ladies_only field to trips and add related code to search subtrip rows

--- a/app/assets/stylesheets/costum.scss.css
+++ b/app/assets/stylesheets/costum.scss.css
@@ -88,6 +88,14 @@ body{
   left: 4px;
 }
 
+.right0{
+  right: 0px;
+}
+
+.left0{
+  left: 0px;
+}
+
 .content{
 	padding-left: 0;
 	padding-right: 0;
