--- a/app/assets/stylesheets/search_subtrips.css.scss
+++ b/app/assets/stylesheets/search_subtrips.css.scss
@@ -111,22 +111,36 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 		padding-right: 48%;
 	}
 	.subtrips-date{
+		margin-top: 0px;
+		margin-bottom: 0px;
 		border: 2px solid #D5D5D5;
 		padding: 17px 17px 17px 10px;
 		padding-bottom: 17px;
 		font-weight: bold;
 		background: #E9E9E9;
 	}
-	#search_subtrips_raw{
+	.panel-body {
+		padding: 0px;
+	}
+	.search_subtrips_raw{
+		position: relative;
+		margin-bottom: 1px;
+		margin-right: 0px;
+		margin-left:  0px;
 		padding-top: 10px;
+		padding-bottom: 10px;
 		border-bottom: 1px solid #e2e2e2;	
 		&:hover{
 			background: #e8f28f;
 		}
+		.ladies_only{
+			position: absolute;
+			top: 0px;
+		}		
 		.description{
 			border-right: 1px solid #eee;
 			border-left: 1px solid #eee;
-			min-height: 90px;
+			// min-height: 90px;
 			padding-top: 4px;
 			.time{
 				font-weight: bold;
@@ -134,6 +148,9 @@ $btn-primary-darker:  darken($btn-primary-color, 8%);
 				font-size: 1.3em;
 			}
 			.fromto{
+				.table{
+					margin-bottom: 0px;
+				}
 				color: #474747;
 				font-size: 1.3em;
 				font-weight: bold;				
