--- a/app/views/trips/_form_new.html.erb
+++ b/app/views/trips/_form_new.html.erb
@@ -19,8 +19,8 @@
         <div class="col-sm-3">
           <%= f.label :total_available_seats %>
         </div>  
-        <div class="col-sm-8">        
-           <%= f.select :total_available_seats, 1..@max_vehicle_seats, selected: 4, hint: 'This field related to your car\'s seating capacity.', label: false %> <br>
+        <div class="col-sm-2">        
+           <%= f.select :total_available_seats, 1..@max_vehicle_seats, {selected: 4}, {class: "form-control"} %>
         </div>
       </div>
       
@@ -29,10 +29,22 @@
         <div class="col-sm-3">
           <%= f.label :currency %>
         </div>     
-        <div class="col-sm-8">
-          <%= f.association :currency, label: false, selected: 1, class: "form-control" %>
+        <div class="col-sm-2">
+          <%= f.association :currency, label: false, selected: 1, input_html: {class: "form-control"} %>
         </div>
       </div> 
+      <!-- ladies_only -->
+      <% if current_user.gender == 'f' %>
+        <div class="row"> 
+          <div class="col-sm-3">
+            <%= f.label :ladies_only %>
+          </div>     
+          <div class="col-sm-2">
+            <%= f.select :ladies_only, [[t('my_no'),0], [t('my_yes'),1]], { include_blank: false },class: "form-control" %>
+
+          </div>
+        </div>         
+      <% end %>
 
       <!-- detail -->
       <div class="row"> 
