remove gender field from edit user profile and make it unchangable

--- a/app/views/users/edit/_personal_profile.html.erb
+++ b/app/views/users/edit/_personal_profile.html.erb
@@ -10,10 +10,11 @@
 	 		label_html: { class: 'col-sm-3' }
 	 	}			) do |f| %>
 
-			<%= f.input :gender, collection: [[t('gender.male'),'m'],[t('gender.female'),'f']], prompt: "Select Gender" %>
+			<%#= f.input :gender, collection: [[t('gender.male'),'m'],[t('gender.female'),'f']], prompt: "Select Gender" %>
 			<%#= f.input :username %>
 			<%= f.input :firstname %>
 			<%= f.input :lastname %>
+			<%= user_form_control_static  User.human_attribute_name("gender"), t_gender(@user.gender) %>
 			<%= f.input :age, collection: 13..90 %>
 			<% if current_user.is_admin? %>
 			  <%= f.label :admin, "Admin" %>
