--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -5,8 +5,8 @@
 			<%= render partial: 'trips/show_edit/head', locals: {user: @trip.driver} %>
 			<%= render 'trips/show_edit/trip_summary' %>
   		<%= render 'trips/show_edit/form_show' %>
-  		<%= render 'comments/comments' %>
-  		<%= render 'comments/form' %>
+  		<%#= render 'comments/comments' %>
+  		<%#= render 'comments/form' %>
 		</div>
 	</div>
 </div>
